# nd0277-data-engineering-with-microsoft-azure-project-3

./: .gitignore  Azure.ipynb  Azure_HTML.html  Local.ipynb  ProjectDataToPostgres.py  README.md  pyproject.toml
postgres/: docker-compose.yaml
sql/: dim_date.sql  dim_rider.sql  dim_station.sql  dim_time.sql  fact_payment.sql  fact_trip.sql
