[project]
name = "nd0277-data-engineering-with-microsoft-azure-project-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyspark>=4.0.1",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]
